# sutils

./: CMakeLists.txt  LICENSE  README.md  string_utilities.hpp
test/: test.cpp
